--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: minima
 title: An Oliphant Never Forgets
 author: Joshua Oliphant
-theme: jekyll-theme-midnight
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
