--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: "mmistakes/minimal-mistakes@4.26.1"
+remote_theme: "alshedivat/al-folio"
 title: An Oliphant Never Forgets
 author: Joshua Oliphant
